--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/italiana": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/config-plugins": "~7.8.0",
     "@expo/prebuild-config": "~6.7.0",
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -35,7 +36,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.6.2",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
