--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-build-properties": "~0.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.3.0"
   },
   "private": true
