--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "^50.0.7",
     "expo-app-loading": "^2.1.1",
+    "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
@@ -45,8 +46,7 @@
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "expo-build-properties": "~0.11.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
