--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "@expo-google-fonts/italiana": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/config-plugins": "~7.8.0",
-    "@expo/prebuild-config": "~6.7.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/auth": "^18.8.0",
@@ -47,6 +45,10 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "yup": "^1.3.3"
+  },
+  "overrides": {
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/prebuild-config": "~6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
