--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@expo/prebuild-config": "~6.7.0",
     "expo-system-ui": "~2.9.3"
   },
+  "overrides": {},
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
