--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^50.0.8",
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/prebuild-config": "~6.7.0",
+    "expo": "^50.0.7",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.9",
@@ -48,13 +50,10 @@
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-image": "~1.10.6"
   },
-  "overrides": {
-    "@expo/config-plugins": "~7.8.0",
-    "@expo/prebuild-config": "~6.7.0",
-    "expo-system-ui": "~2.9.3"
-  },
+  "overrides": {},
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
