--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-native-firebase/auth": "^18.8.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
+    "expo": "^50.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-build-properties": "~0.11.1",
-    "expo-font": "~11.10.3",
-    "expo-linear-gradient": "~12.7.2",
-    "expo": "^50.0.8",
     "expo-dev-client": "~3.3.9",
+    "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.4",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -34,19 +36,19 @@
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "expo-location": "~16.5.4",
-    "react-native-maps": "1.10.0"
+    "yup": "^1.3.3"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
