--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "@shopify/react-native-skia": "0.1.221"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
