--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/italiana": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
@@ -29,6 +29,7 @@
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "firebase": "^10.8.1",
     "formik": "^2.4.5",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
