--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.13",
-    "expo": "^50.0.8",
-    "expo-app-loading": "^2.1.1",
+    "@shopify/react-native-skia": "0.1.221",
+    "expo": "~50.0.11",
     "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.9",
     "expo-font": "~11.10.3",
@@ -44,14 +44,14 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "@shopify/react-native-skia": "0.1.221"
+    "yup": "^1.3.3"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
