--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.6.4",
+    "react-native-wheel-picker-expo": "^0.5.4",
+    "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-haptics": "~12.8.1"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
