--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow-2": "^7.0.8",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-vector-icons": "^10.0.3",
