👌 IMPROVE: Refactor imports and paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,11 @@
     "rootDir": "./",
     "baseUrl": "./",
     "paths": {
-      "*": ["types/*"]
+      "*": ["types/*"],
+      "@/*": ["*"]
     },
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "types": ["react", "react-native", "jest"]
   },
   "exclude": [
     "node_modules",
