--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-super-grid": "^5.0.0",
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
@@ -56,7 +57,11 @@
     "redux": "^5.0.1",
     "yup": "^1.3.3"
   },
-  "overrides": {},
+  "overrides": {
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/prebuild-config": "~6.7.0",
+    "expo-system-ui": "~2.9.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
