--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.9",
     "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.4",
@@ -44,6 +45,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-shadow-2": "^7.0.8",
+    "react-native-super-grid": "^5.0.0",
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
@@ -53,8 +55,7 @@
     "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "expo-haptics": "~12.8.1"
+    "yup": "^1.3.3"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
