--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,13 +25,16 @@
     "rootDir": "./",
     "baseUrl": "./",
     "paths": {
-      "*": ["types/*"]
+      "*": ["types/*"],
+      "@/*": ["*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ],
+    "typeRoots": ["./node_modules/@types", "./types"],
     "types": ["react", "react-native", "jest"]
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
