--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-build-properties": "~0.11.1",
     "expo-dev-client": "~3.3.10",
     "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.4",
@@ -35,7 +36,7 @@
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
@@ -53,14 +54,14 @@
     "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "expo-haptics": "~12.8.1"
+    "yup": "^1.3.3"
   },
   "overrides": {},
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.3.0"
   },
