--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,11 +27,12 @@
     "paths": {
       "*": ["types/*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./types"
-    ],
-    "types": ["react", "react-native", "jest"]
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
