--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-firebase/auth": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/native-stack": "^6.9.25",
     "@shopify/react-native-skia": "0.1.221",
     "expo": "~50.0.13",
     "expo-build-properties": "~0.11.1",
@@ -66,9 +66,11 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.3.0"
+  },
+  "config": {
+    "prefer-offline": "true"
   },
   "private": true
 }
