Update app.json and navigation routes

--- a/app.json
+++ b/app.json
@@ -1,19 +1,23 @@
 {
   "expo": {
     "name": "sunset-matches-ui",
-    "slug": "sunset-matches-ui",
+    "slug": "sunset-matches",
     "version": "1.0.0",
     "sdkVersion": "50.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "androidStatusBar": { "translucent": true },
+    "androidStatusBar": {
+      "translucent": true
+    },
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "googleServicesFile": "./GoogleService-Info.plist",
       "bundleIdentifier": "com.sm.mobile.ui",
@@ -30,7 +34,11 @@
         "googleMaps": {
           "apiKey": "AIzaSyCYCxd1eaBXWLBxrECpcvQyQ6Cq0LvhDbU"
         }
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -47,7 +55,6 @@
           }
         }
       ],
-
       [
         "expo-location",
         {
@@ -57,8 +64,9 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "5f2644c7-502f-4abd-a8dd-94e0be32d4aa"
+        "projectId": "72768cac-26dd-4d6d-8d2a-2fe7d1b5052e"
       }
-    }
+    },
+    "owner": "sunsetmatches"
   }
 }
