--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.25",
     "@shopify/react-native-skia": "0.1.221",
