--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-image-picker": "~14.7.1",
+    "expo-camera": "~14.1.1"
   },
   "overrides": {
     "@expo/config-plugins": "~7.8.0",
