--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@shopify/react-native-skia": "0.1.221",
     "expo": "~50.0.13",
     "expo-build-properties": "~0.11.1",
+    "expo-camera": "~14.1.1",
     "expo-dev-client": "~3.3.10",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.4",
     "expo-splash-screen": "~0.26.4",
@@ -52,15 +54,14 @@
     "react-native-svg": "14.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.6.4",
     "react-native-wheel-picker-expo": "^0.5.4",
     "react-native-wheel-scrollview-picker": "^2.0.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "yup": "^1.3.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-camera": "~14.1.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
