--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "eas-dev-android": "eas build --profile development --platform android",
-    "eas-dev-ios": "eas build --profile development --platform ios"
+    "eas-dev-ios": "eas build --profile development --platform ios",
+    "eas-prod-android": "eas build --profile production --platform android",
+    "eas-prod-ios": "eas build --profile production --platform ios",
+    "eas-prod-submit-android": "eas submit --profile production --platform android"
+
   },
   "dependencies": {
     "@expo-google-fonts/italiana": "^0.2.3",
