--- a/eas.json
+++ b/eas.json
@@ -8,24 +8,31 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk"
-      }
+      },
+      "autoIncrement": true
     },
     "preview": {
       "android": {
         "buildType": "apk"
-      }
+      },
+      "autoIncrement": true
     },
     "preview2": {
       "android": {
         "gradleCommand": ":app:assembleRelease"
-      }
+      },
+      "autoIncrement": true
     },
     "preview3": {
-      "developmentClient": true
+      "developmentClient": true,
+      "autoIncrement": true
     },
     "preview4": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "autoIncrement": true
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   }
 }
