--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/italiana": "^0.2.3",
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@gorhom/bottom-sheet": "4",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/auth": "^19.0.0",
